--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,13 +6,13 @@
 
 <ion-content [fullscreen]="true">
   <div class="container-coin">
-    <img [src]="image" alt="" />
+    <img [@rotatedStated]="state" [src]="image" alt="" />
     <h1>{{info}}</h1>
   </div>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="dark" class="btn">
+  <ion-toolbar (click)="jogarMoeda()" color="dark" class="btn">
     <ion-title class="ion-text-center">Jogar a moeda!</ion-title>
   </ion-toolbar>
 </ion-footer>
