--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Marcador de Truco</ion-title>
+  <ion-toolbar color="aaa">
+    <ion-title class="ion-text-center">Marcador de Truco</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -16,6 +16,7 @@
       <button class="btn" (click)="btnAdd4()">{{ btn4 }}</button>
       <button class="btn" (click)="btnAdd5()">{{ btn5 }}</button>
     </div>
+
     <div class="times">
       <div class="time">
         <h2>Time 1</h2>
@@ -39,6 +40,7 @@
         </button>
       </div>
     </div>
+
     <div class="rounds">
       <div class="header">
         <h2>Partidas</h2>
@@ -57,8 +59,8 @@
   </div>
 </ion-content>
 
-<ion-footer>
-  <ion-toolbar class="btn" (click)="clean()">
+<ion-footer >
+  <ion-toolbar color="aaa" class="btn" (click)="clean()">
     <ion-title class="ion-text-center title">Limpar</ion-title>
   </ion-toolbar>
 </ion-footer>
