--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,32 +10,32 @@
       <h1>Valendo: <span>{{ valor }}</span></h1>
     </div>
     <div class="buttons">
-      <button class="btn" (click)="btnAdd1()">{{ btn1 }}</button>
-      <button class="btn" (click)="btnAdd2()">{{ btn2 }}</button>
-      <button class="btn" (click)="btnAdd3()">{{ btn3 }}</button>
-      <button class="btn" (click)="btnAdd4()">{{ btn4 }}</button>
-      <button class="btn" (click)="btnAdd5()">{{ btn5 }}</button>
+      <button class="botao" (click)="botaoAdd1()">{{ botao1 }}</button>
+      <button class="botao" (click)="botaoAdd2()">{{ botao2 }}</button>
+      <button class="botao" (click)="botaoAdd3()">{{ botao3 }}</button>
+      <button class="botao" (click)="botaoAdd4()">{{ botao4 }}</button>
+      <button class="botao" (click)="botaoAdd5()">{{ botao5 }}</button>
     </div>
 
     <div class="times">
       <div class="time">
         <h2>Time 1</h2>
-        <button class="btn-add" (click)="addValue()">
+        <button class="botao-add" (click)="addValue()">
           <ion-icon name="add-outline"></ion-icon>
         </button>
         <h1>{{ ponto }}</h1>
-        <button class="btn-remove" (click)="removeValue()">
+        <button class="botao-remove" (click)="removeValue()">
           <ion-icon name="remove-outline"></ion-icon>
         </button>
       </div>
       <h1>X</h1>
       <div class="time">
         <h2>Time 2</h2>
-        <button class="btn-add" (click)="addValue2()">
+        <button class="botao-add" (click)="addValue2()">
           <ion-icon name="add-outline"></ion-icon>
         </button>
         <h1>{{ ponto2 }}</h1>
-        <button class="btn-remove" (click)="removeValue2()">
+        <button class="botao-remove" (click)="removeValue2()">
           <ion-icon name="remove-outline"></ion-icon>
         </button>
       </div>
@@ -60,7 +60,7 @@
 </ion-content>
 
 <ion-footer >
-  <ion-toolbar color="aaa" class="btn" (click)="clean()">
+  <ion-toolbar color="dark" class="botao" (click)="clean()">
     <ion-title class="ion-text-center title">Limpar</ion-title>
   </ion-toolbar>
 </ion-footer>
