--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -45,7 +45,7 @@
     .btn:hover {
       opacity: 1;
       color: rgb(0, 0, 0);
-      background-color: #80ffea;
+      background-color: #964343;
       font-weight: 550;
     }
   }
@@ -72,7 +72,7 @@
         margin-bottom: 30px;
       }
 
-      .btn-add, .btn-remove {
+      .botao-add, .botao-remove {
         width: 100%;
         height: 40px;
         border-radius: 10px;
@@ -85,15 +85,15 @@
         }
       }
 
-      .btn-add:hover, .btn-remove:hover {
+      .botao-add:hover, .botao-remove:hover {
         opacity: 1;
       }
 
-      .btn-add {
+      .botao-add {
         background-color: #1DB954;
       }
 
-      .btn-remove {
+      .botao-remove {
         background-color: #ff0000;
       }
 
@@ -145,7 +145,7 @@
         }
       }
 
-      .team:first-child {
+      .team:truco {
         margin-bottom: 20px;
       }
     }
