--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="dark">
+  <ion-toolbar color="primary">
     <ion-title> Cara ou Coroa </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,7 +12,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar (click)="jogarMoeda()" color="dark" class="btn">
+  <ion-toolbar (click)="jogarMoeda()" color="tertiary" class="btn">
     <ion-title class="ion-text-center">Jogar a moeda!</ion-title>
   </ion-toolbar>
 </ion-footer>
