--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,18 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 3
+      Dado
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-input>Tamanho</ion-input>
+  <img src="assets/dado.png" alt="">
+  <h1>Valor do Dado: <span>{{ valordado }}</span></h1>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-button class="btn" class="botaolimpar">
+    Jogar Dado!
+  </ion-button>
+
 </ion-content>
